--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="javascripts/github.jquery.js" type="text/javascript"></script>
+    <script type="text/javascript">
+      $(function() {
+        $("#github-projects").loadRepositories("bencharp");
+      });
+    </script>
   </head>
   <body>
     <div class="wrapper">
@@ -23,11 +30,9 @@
 
       </header>
       <section>
-        <p>List of my public contributions</p>
-
-<p><a href="http://unhosted.bencharp.com/"><img src="http://behind.bencharp.com/img/remote.png" alt="french unhosted adventures"></a></p>
-
-<p><a href="http://thenounproject.com/Benoit/"><img src="http://behind.bencharp.com/img/nounproject.png" alt="noun project contributions"></a></p>
+        
+        <div id="github-projects"></div>
+          
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
