--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script src="javascripts/jquery-1.10.2.min.js"></script>
     <script src="javascripts/github.jquery.js" type="text/javascript"></script>
     <script type="text/javascript">
       $(function() {
